<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, WorldActivity!</string>
    <string name="app_name">Game of Life</string>
    <string name="shake">Shake</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="step">Step</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
</resources>
