<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent" android:layout_height="wrap_content">
		<Button android:text="@string/shake" android:id="@+id/shake"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<Button android:text="@string/start" android:id="@+id/start"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<Button android:text="@string/stop" android:id="@+id/stop"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<Button android:text="@string/step" android:id="@+id/step"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<Button android:text="@string/save" android:id="@+id/save"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<Button android:text="@string/load" android:id="@+id/load"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
	</LinearLayout>
	<com.jooyunghan.gameoflife.WorldView
		android:id="@+id/world" android:layout_width="match_parent"
		android:layout_height="match_parent" />

</LinearLayout>
